# trackit

./: .env  .replit  ai_predictions.py  app.py  indian_data.py  main.py  models.py  pyproject.toml  qr_handler.py  requirements.txt  routes.py  websocket_handlers.py
attached_assets/: Pasted-Project-Title-TrackIt-Project-Overview-TrackIt-is-a-mobile-order-tracking-application-designed-fo-1748321632852.txt
static/css/: style.css
static/js/: main.js  qr_scanner.js
templates/: 404.html  500.html  base.html  create_order.html  customer_dashboard.html  delivery_dashboard.html  index.html  login.html  qr_scanner.html  register.html  vendor_dashboard.html
