[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "oauthlib>=3.2.2",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "flask-login>=0.6.3",
    "numpy>=2.2.6",
    "pillow>=11.2.1",
    "python-socketio>=5.13.0",
    "sqlalchemy>=2.0.41",
    "flask-socketio>=5.5.1",
    "qrcode>=8.2",
    "pytz>=2025.2",
    "scikit-learn>=1.6.1",
    "pandas>=2.2.3",
    "werkzeug>=3.1.3",
]
